Allow Krusader to be built under the 16.04 LTS versions of Ubuntu, Kubuntu, etc

FIXED: [ 417349 ] Krusader installation (make) fails when trying to build krarc
BUG: 417349

Differential Revision: https://phabricator.kde.org/D27335